# LingHuiBot

./: .env  .env.example  .gitignore  LICENSE  README.md  bot.py  package-lock.json  pyproject.toml  requirements.txt  supplementary_agreement.md
.github/ISSUE_TEMPLATE/: Bug 反馈.yml  bug_report.md  feature_request.md  功能建议或改进.yml
.github/workflows/: dpy_actions.yaml  python-publish.yml
Markdown/: All_Menu.md  Furry_System.md  Main_System.md  Main_System.md.bak  User_Agreement.md
markdown/: admin_system.md  all_menu.md  cookiecloud_config.md  entertainment_system.md  furry_system.md  main_system.md  marry_system.md  user_agreement.md
migrations/versions/: 33655e2b5d91_.py  350a6cfe5ae7_init.py  3edb700c1119_.py  fd1877d177ff_.py  fd4af3c9abc4_.py
src/: __init__.py
src/database/models/: birthday_orm.py  core_models.py
src/plugins/: Exceptions.py  Furry.py  FurryBar.py  Handler.py  Main.py  Marry.py  Menu.py  Order.py  Weather.py  birthday.py  demo.py  demo.py.bak  echo.py  happybirthday.py  langrensha.py  main.py  marry.py  menu.py  order.py  report_bug.py  utils.py
src/plugins/DataBase/: __init__.py  commands.py  models.py
src/plugins/Furry/: FurryFusion.py
src/plugins/FurryModule/: Furry.py  FurryBar.py  FurryFusion.py  Upload.py  Upload.py.bak  __init__.py
src/plugins/FurryModule/FurryFusion/: FurryFusion.py
src/plugins/WolfKill/: __init__.py  langrensha.py
src/plugins/automatic_task/: user_misc.py
src/plugins/birthday/: __init__.py  handlers.py  models.py  tasks.py
src/plugins/birthday_te/: __init__.py  birthday.py  commands.py  models.py  tasks.py
src/plugins/blacklist/: __init__.py  __main__.py  command.py  handler.py  model.py  processor.py  tools.py
src/plugins/cookiecloud/: main.py
src/plugins/database/: __init__.py  models.py
src/plugins/entertainment/: __init__.py  check_files.py  commands.py
src/plugins/entertainment/currency/: __init__.py  currency.py  exceptions.py  models.py
src/plugins/entertainment/currency/currency_subsys/: __init__.py
src/plugins/entertainment/currency/currency_subsys/bank/: bank.py  exceptions.py  models.py
src/plugins/entertainment/currency/currency_subsys/fishing/: __init__.py  fishing.py  items.py  models.py
src/plugins/entertainment/currency/currency_subsys/guess_number/: __init__.py  guess_number.py  tools.py
src/plugins/entertainment/currency/currency_subsys/robbery/: __init__.py  robbery.py
src/plugins/entertainment/currency/currency_subsys/rubbery/: __init__.py  rubbery.py
src/plugins/entertainment/drift _bottle/: commands.py  drify_bottle.py
src/plugins/entertainment/drift_bottle/: __init__.py  drift_bottle.py  exceptions.py  models.py  scheduled_task.py
src/plugins/entertainment/make_emoji/: __init__.py  make_emoji.py
src/plugins/entertainment/make_memes/: __init__.py  make_memes.py  meme_list_tools.py  tools.py
src/plugins/entertainment/marry_system/: __init__.py  check_files.py  commands.py  marry.py
src/plugins/entertainment/tarot/: __init__.py  tarot.py
src/plugins/entertainment/tarot/resource/: tarot.json
src/plugins/entertainment/wolfkill/: __init__.py  check_rule.py  wolfkill.py  wolfkill_game.py  wolfkill_guide.md  wolfkill_night.py  wolfkill_vote.py
src/plugins/furrymodule/: __init__.py  check_file.py  commands.py  furry.py  furrybar.py  upload.py
src/plugins/furrymodule/furry/: __init__.py  furry.py  upload.py
src/plugins/furrymodule/furry/upload/: upload.py
src/plugins/furrymodule/furrybar/: __init__.py  furrybar.py
src/plugins/furrymodule/furryfusion/: __init__.py  furryfusion.py  tools.py  tools.py.bak
src/plugins/main/: __init__.py  check_file.py  commands.py  main.py
src/plugins/main/check_path/: __init__.py
src/plugins/main/commands/: __init__.py  commands.py
src/plugins/main/group_admin/: __init__.py  group_admin.py
src/plugins/marry_system/: __init__.py  check_files.py  commands.py  marry.py
src/plugins/menu/: check_files.py  commands.py  menu.py
src/plugins/report_bug/: __init__.py  report_bug.py
src/plugins/screenshot/: __init__.py  commands.py  screenshots.py  tools.py
src/plugins/screenshots/: __init__.py  commands.py  screenshots.py  tools.py
src/plugins/sensitive_manager/: __init__.py  command.py  sensitive_check.py
src/plugins/weather/: __init__.py  check_file.py  commands.py  models.py  scheduled_task.py  test.html  typhoon.py  utils.py  weather.py
src/plugins/weather/html_template/: typhoon.html  weather.html  weather_vertical.html
tests/: conftest.py  test_auto_task.py  test_database.py  test_generate_text_image.py  test_handle_error.py  test_plugin_loading.py  test_utils_handle_json.py
