[project]
name = "LingHuiBot"
version = "1.6"
description = "LingHuiBot"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "nonebot2[fastapi]>=2.4.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-orm>=0.8.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-picmcstat>=0.8.0",
    "nonebot-plugin-multincm>=1.3.1.post1",
    "nonebot-plugin-datastore>=1.3.1",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot_plugin_mc_server_status>=0.4.1",
    "nonebot-plugin-htmlrender>=0.6.7",
    "pandas>=2.3.3",
    "pyahocorasick>=2.2.0",
    "zhconv>=1.4.3",
    "emoji==2.15.0",
    "psutil==7.0.0",
    "pywin32==311; sys_platform == 'win32'"
]

[tool.nonebot]

plugin_dirs = ["src/plugins"]
builtin_plugins = []
[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-orm = ["nonebot_plugin_orm"]
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-picmcstat = ["nonebot_plugin_picmcstat"]
nonebot-plugin-multincm = ["nonebot_plugin_multincm"]
nonebot-plugin-datastore = ["nonebot_plugin_datastore"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot_plugin_mc_server_status = ["nonebot_plugin_mc_server_status"]
nonebot-plugin-htmlrender = ["nonebot_plugin_htmlrender"]


[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]

[tool.pyright]
"typeCheckingMode" = "basic"
"reportArgumentType" = "none"
"reportOptionalSubscript" = "none"
"reportCallIssue" = "none"
"reportOptionalMemberAccess" = "none"
"reportAttributeAccessIssue" = "none"
"reportAssignmentType" = "none"
"reportReturnType" = "none"
"reportGeneralTypeIssues" = "none"
"reportInvalidTypeVarUse" = "none"
"reportInvalidTypeArguments" = "none"
"reportOptionalCall" = "none"
"reportUnboundVariable" = "none"
"reportRedeclaration" = "none"
"reportOperatorIssue" = "none"
"reportUnsupportedDunderAll" = "none"
"reportIndexIssue" = "none"
"reportOptionalIterable" = "none"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true