
[project]
name = "LingHuiBot"
version = "1.6"
description = "LingHuiBot"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-multincm>=1.3.1.post1",
    "nonebot-plugin-datastore>=1.3.1",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-htmlrender>=0.6.7",
    "pandas>=3.0.2",
    "pyahocorasick>=2.2.0",
    "emoji==2.15.0",
    "psutil==7.2.2",
    "pywin32==311; sys_platform == 'win32'",
    "nb-cli>=1.7.3",
    "nonebot-plugin-kawaii-status>=0.2.0",
    "nonebot-plugin-mcserver-status-check>=0.1.8",
    "nonebot-plugin-orm>=0.8.3",
    "opencc>=1.2.0",
]

[tool.nonebot]

plugin_dirs = ["src/plugins"]
builtin_plugins = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-apscheduler = ["nonebot_plugin_apscheduler"]
nonebot-plugin-multincm = ["nonebot_plugin_multincm"]
nonebot-plugin-datastore = ["nonebot_plugin_datastore"]
nonebot-plugin-localstore = ["nonebot_plugin_localstore"]
nonebot-plugin-htmlrender = ["nonebot_plugin_htmlrender"]
nonebot-plugin-kawaii-status = ["nonebot_plugin_kawaii_status"]
nonebot-plugin-mcserver-status-check = ["nonebot_plugin_mcserver_status_check"]
nonebot-plugin-orm = ["nonebot_plugin_orm"]


[tool.nonebot.adapters]
"@local" = []
nonebot-adapter-onebot = [{ name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }]

[tool.pyright]
"typeCheckingMode" = "basic"
"reportArgumentType" = "none"
"reportOptionalSubscript" = "none"
"reportCallIssue" = "none"
"reportOptionalMemberAccess" = "none"
"reportAttributeAccessIssue" = "none"
"reportAssignmentType" = "none"
"reportReturnType" = "none"
"reportGeneralTypeIssues" = "none"
"reportInvalidTypeVarUse" = "none"
"reportInvalidTypeArguments" = "none"
"reportOptionalCall" = "none"
"reportUnboundVariable" = "none"
"reportRedeclaration" = "none"
"reportOperatorIssue" = "none"
"reportUnsupportedDunderAll" = "none"
"reportIndexIssue" = "none"
"reportOptionalIterable" = "none"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
